Fixed fonts and tweaked supersampling.
- Fonts were broken on machines without MS Word installed, since
  unfortunately the Century Gothic font was installed along with
  this. I chose the closest matching Google fonts to the original
  theme/intent, though it's not a perfect match unfortunately.

- Updated temporary code that would do extreme supersampling on
  low resolution windows (up to 4x width and 4x height) which was
  originally used to do a hacky anti-aliasing when presenting on
  my old university's dinosaur 800x600 projectors. Now it only
  supersamples up to 2x and only if the resolution is below 800x600.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	margin: 0;
 	color: #aaa;
 	background-color: #000;
-	font-family: "sans-serif", "Century Gothic";
+	font-family: 'Average Sans', sans-serif;
 	cursor: default;
 
 	-webkit-touch-callout: none;
@@ -54,7 +54,7 @@ canvas {
 }
 
 .title {
-	font-family: "sans-serif", "Century Gothic";
+	font-family: 'Abel', sans-serif;
 	font-size: 2em;
 	font-weight: normal;
 	text-shadow: 0px 0px 4px #aaa;
@@ -219,7 +219,7 @@ canvas {
 
 .linkBox {
 	width: 100%;
-	font-family: "sans-serif", "Century Gothic";
+	font-family: 'Electrolize', sans-serif;
 	font-size: 0.7em;
 	background-color: #000;
 	padding: 5px;
